# fastapi-test

./: README.md  fastapi_async.py  main.py  pyproject.toml
